src/test/ui/async-await/issues/issue-62097.stderr
error[E0758]: cannot infer an appropriate lifetime
  --> $DIR/issue-62097.rs:12:31
   |
LL |     pub async fn run_dummy_fn(&self) {
   |                               ^^^^^
   |                               |
   |                               this data with an anonymous lifetime `'_`...
   |                               ...is captured here...
   |
note: ...and is required to live as long as `'static` here
  --> $DIR/issue-62097.rs:13:9
   |
LL |         foo(|| self.bar()).await;
   |         ^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0758`.
